[gd_scene load_steps=9 format=3 uid="uid://cukmhkb7vgxxy"]

[ext_resource type="Script" uid="uid://db0nggb4scm7s" path="res://scripts/menu.gd" id="1_con2f"]
[ext_resource type="Texture2D" uid="uid://b4a3u1x3qgxu1" path="res://textures/background.jpg" id="1_vjb58"]
[ext_resource type="Texture2D" uid="uid://b8l67msa4vfmd" path="res://textures/Menu_Background_logo_left.png" id="3_mhnvy"]
[ext_resource type="Texture2D" uid="uid://djvwt7nddkes" path="res://textures/Butttons-Menu/3.png" id="4_mhnvy"]
[ext_resource type="Texture2D" uid="uid://c85mvxl1c6ki0" path="res://textures/Butttons-Menu/Settings.png" id="5_4ytvr"]

[sub_resource type="FontVariation" id="FontVariation_con2f"]
variation_embolden = 0.63
spacing_glyph = 10
spacing_space = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4ytvr"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g3eks"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_con2f")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_vjb58")
stretch_mode = 1

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -0.99999994
offset_top = 0.99999994
offset_right = 2751.0
offset_bottom = 1537.0
scale = Vector2(0.42, 0.42)
texture = ExtResource("3_mhnvy")

[node name="Label" type="Label" parent="."]
visible = false
layout_mode = 0
offset_top = 130.0
offset_right = 1148.0
offset_bottom = 218.0
theme_override_colors/font_color = Color(1, 1, 0.38431373, 1)
theme_override_fonts/font = SubResource("FontVariation_con2f")
theme_override_font_sizes/font_size = 64
text = "Light Echoes"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 162.0
offset_top = -58.0
offset_right = 666.0
offset_bottom = 114.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_4ytvr")
icon = ExtResource("4_mhnvy")

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 782.0
offset_top = 398.0
offset_right = 1290.0
offset_bottom = 569.0
scale = Vector2(0.52, 0.52)
theme_override_styles/hover = SubResource("StyleBoxFlat_g3eks")
icon = ExtResource("5_4ytvr")

[connection signal="button_down" from="PlayButton" to="." method="_on_play_button_button_down"]
[connection signal="mouse_entered" from="PlayButton" to="." method="_on_play_button_mouse_entered"]
[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
